styling List Geo Fencing

--- a/src/app/modules/journal-voucher/search-jv-pending/search-jv-pending.component.html
+++ b/src/app/modules/journal-voucher/search-jv-pending/search-jv-pending.component.html
@@ -1,9 +1,8 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Pending Transactions</div>
+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight ">Pending Transactions</div>
 
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
-         style="flex-wrap: wrap" [formGroup]="pendingForm">
+    <div [formGroup]="pendingForm">
         <!-- <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -12,105 +11,134 @@
                        autocomplete="off"/>
             </mat-form-field>
         </div> -->
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
-                <mat-label class="customMatLabel">Zone</mat-label>
-                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
-                    <mat-option [value]="SelectedZones?.ZoneId">
-                        {{SelectedZones?.ZoneName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
-                <mat-label class="customMatLabel">Zone</mat-label>
-                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
-                            (selectionChange)="changeZone($event)">
-                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                [disabled]="disable_zone">
-                        {{zone?.ZoneName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
 
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label class="customMatLabel">Organizational Limit <strong class="matMandatory">*</strong>
-                </mat-label>
-                <mat-select [(ngModel)]="selected_b" formControlName="OrganizationUnit" [disabled]="disable_branch"
-                            placeholder="Organization Unit"
-                            *ngIf="!single_branch">
-                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode">
-                        {{branch?.Name}}
-                    </mat-option>
-                </mat-select>
-                <mat-select [(ngModel)]="selected_b" formControlName="OrganizationUnit" [disabled]="disable_branch"
-                            placeholder="Organization Unit"
-                            *ngIf="single_branch">
-                    <mat-option [value]="SelectedBranches?.BranchCode">
-                        {{SelectedBranches?.Name}}
-                    </mat-option>
-                </mat-select>
-                <mat-error *ngIf="hasError('OrganizationUnit', 'required')">Organization Unit <strong>required</strong>
-                </mat-error>
-            </mat-form-field>
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                    <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
+                        <mat-label class="customMatLabel">Zone</mat-label>
+                        <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
+                            <mat-option [value]="SelectedZones?.ZoneId">
+                                {{SelectedZones?.ZoneName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
+                        <mat-label class="customMatLabel">Zone</mat-label>
+                        <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
+                                    (selectionChange)="changeZone($event)">
+                            <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                        [disabled]="disable_zone">
+                                {{zone?.ZoneName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+
+
+                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-label class="customMatLabel">Organizational Limit <strong class="matMandatory">*</strong>
+                        </mat-label>
+                        <mat-select [(ngModel)]="selected_b" formControlName="OrganizationUnit" [disabled]="disable_branch"
+                                    placeholder="Organization Unit"
+                                    *ngIf="!single_branch">
+                            <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode">
+                                {{branch?.Name}}
+                            </mat-option>
+                        </mat-select>
+                        <mat-select [(ngModel)]="selected_b" formControlName="OrganizationUnit" [disabled]="disable_branch"
+                                    placeholder="Organization Unit"
+                                    *ngIf="single_branch">
+                            <mat-option [value]="SelectedBranches?.BranchCode">
+                                {{SelectedBranches?.Name}}
+                            </mat-option>
+                        </mat-select>
+                        <mat-error *ngIf="hasError('OrganizationUnit', 'required')">Organization Unit <strong>required</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-label class="customMatLabel">Transaction Date (ddMMyyyy) <strong class="matMandatory">*</strong>
+                        </mat-label>
+                        <input matInput [matDatepicker]="picker2" formControlName="TransactionDate" maxlength="8"
+                               autocomplete="off" [max]="maxDate" appNumberOnly/>
+                        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                        <mat-datepicker #picker2></mat-datepicker>
+        
+                        <mat-error *ngIf="hasError('TransactionDate', 'required')">Transaction Date <strong>required</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label class="customMatLabel">Transaction Date (ddMMyyyy) <strong class="matMandatory">*</strong>
-                </mat-label>
-                <input matInput [matDatepicker]="picker2" formControlName="TransactionDate" maxlength="8"
-                       autocomplete="off" [max]="maxDate" appNumberOnly/>
-                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                <mat-datepicker #picker2></mat-datepicker>
+        
 
-                <mat-error *ngIf="hasError('TransactionDate', 'required')">Transaction Date <strong>required</strong>
-                </mat-error>
-            </mat-form-field>
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-label>Select Nature</mat-label>
+                        <mat-select formControlName="Nature">
+                            <mat-option *ngFor="let nature of Nature" [value]="nature.Id">
+                                {{nature.Name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-label class="customMatLabel">Voucher # <strong class="matMandatory">*</strong></mat-label>
+                        <input matInput placeholder="Voucher No" formControlName="VoucherNo" maxlength="30" autocomplete="off"
+                               appNumberOnly/>
+                        <mat-error *ngIf="hasError('VoucherNo', 'required')">Voucher No <strong>required</strong></mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-label>Select Status</mat-label>
+                        <mat-select formControlName="Status" [disabled]="true">
+                            <mat-option *ngFor="let status of JvStatuses" [value]="status.Value">
+                                {{status.Name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label>Select Nature</mat-label>
-                <mat-select formControlName="Nature">
-                    <mat-option *ngFor="let nature of Nature" [value]="nature.Id">
-                        {{nature.Name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+
+
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center sm:mt-0 sm:ml-4">
+
+                    <button mat-raised-button color="accent"
+                            type="button" (click)="find()">
+                        <mat-icon>search</mat-icon>
+                        Find
+                    </button>
+                </div>
+            </div>
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label class="customMatLabel">Voucher # <strong class="matMandatory">*</strong></mat-label>
-                <input matInput placeholder="Voucher No" formControlName="VoucherNo" maxlength="30" autocomplete="off"
-                       appNumberOnly/>
-                <mat-error *ngIf="hasError('VoucherNo', 'required')">Voucher No <strong>required</strong></mat-error>
-            </mat-form-field>
-        </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label>Select Status</mat-label>
-                <mat-select formControlName="Status" [disabled]="true">
-                    <mat-option *ngFor="let status of JvStatuses" [value]="status.Value">
-                        {{status.Name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-        <div class="flex flex-shrink-0 items-center sm:mt-0 sm:ml-4">
 
-            <button mat-raised-button color="accent"
-                    type="button" (click)="find()">
-                <mat-icon>search</mat-icon>
-                Find
-            </button>
-        </div>
+
+
 
     </div>
-    <div class="flex flex-auto overflow-scroll mx-12" style="flex-direction: column;">
+    <div class="flex flex-auto overflow-scroll" style="flex-direction: column;">
 
         <div class="example-table-container">
 
