--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -1,128 +1,157 @@
-<div class=" px-6 pt-2 overflow-scroll sm:absolute sm:inset-0 flex
+<div class=" px-10 pt-4 overflow-scroll sm:absolute sm:inset-0 flex
 flex-col flex-auto min-w-0  bg-card dark:bg-transparent">
     <div class="text-4xl font-extrabold tracking-tight">List Geo Fencing</div>
 
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-2  border-b"
-         style="flex-wrap: wrap" [formGroup]="listForm">
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+    <div [formGroup]="listForm">
 
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label class="customMatLabel">PP No.</mat-label>
-                <input matInput placeholder="PP No." formControlName="PPNo" maxlength="30"
-                       autocomplete="off"/>
-            </mat-form-field>
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">PP No.</mat-label>
+                        <input matInput placeholder="PP No." formControlName="PPNo" maxlength="30"
+                               autocomplete="off"/>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
+                        <mat-label class="customMatLabel">Zone</mat-label>
+                        <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
+                            <mat-option [value]="SelectedZones?.ZoneId">
+                                {{SelectedZones?.ZoneName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
+                        <mat-label class="customMatLabel">Zone</mat-label>
+                        <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
+                                    (selectionChange)="changeZone($event)">
+                            <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                        [disabled]="disable_zone">
+                                {{zone?.ZoneName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+        
+        
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
+                        <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
+                                    (selectionChange)="changeBranch($event)"
+                                    *ngIf="!single_branch">
+                            <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
+                            >
+                                {{branch?.Name}}
+                            </mat-option>
+                        </mat-select>
+                        <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
+                                    *ngIf="single_branch">
+                            <mat-option [value]="SelectedBranches?.BranchCode"
+                            >
+                                {{SelectedBranches?.Name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+            
         </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
-                <mat-label class="customMatLabel">Zone</mat-label>
-                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
-                    <mat-option [value]="SelectedZones?.ZoneId">
-                        {{SelectedZones?.ZoneName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
-                <mat-label class="customMatLabel">Zone</mat-label>
-                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
-                            (selectionChange)="changeZone($event)">
-                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                [disabled]="disable_zone">
-                        {{zone?.ZoneName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">Circle</mat-label>
+        
+                        <mat-select [(ngModel)]="selected_c" formControlName="CircleId" [disabled]="disable_circle">
+                            <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"
+                            >
+                                {{circle?.CircleCode}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label>Choose start date</mat-label>
+                        <input matInput [matDatepicker]="picker1" formControlName="StartDate"
+                               (dateChange)="comparisonStartdateValidator()" autocomplete="off">
+        
+                        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+        
+                        <mat-datepicker #picker1></mat-datepicker>
+        
+                        <mat-error *ngIf="listForm.controls['StartDate'].hasError('invaliddaterange')">
+                            <strong>Start date cannot be greater than end date</strong>
+                        </mat-error>
+                        <mat-error *ngIf="hasError('StartDate', 'required')">Start Date <strong>required</strong>
+                        </mat-error>
+        
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0"
+                >
+        
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label>Choose end date</mat-label>
+                        <input matInput [matDatepicker]="picker" formControlName="EndDate"
+                               (dateChange)="comparisonEnddateValidator()" autocomplete="off">
+        
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+        
+                        <mat-error *ngIf="listForm.controls['EndDate'].hasError('invaliddaterange')">
+                            <strong>End date cannot be earlier than start date</strong>
+                        </mat-error>
+        
+                        <mat-error *ngIf="hasError('EndDate', 'required')">End Date <strong>required</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+            
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
-                            (selectionChange)="changeBranch($event)"
-                            *ngIf="!single_branch">
-                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
-                    >
-                        {{branch?.Name}}
-                    </mat-option>
-                </mat-select>
-                <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
-                            *ngIf="single_branch">
-                    <mat-option [value]="SelectedBranches?.BranchCode"
-                    >
-                        {{SelectedBranches?.Name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+                    <button mat-raised-button color="accent"
+                            type="button" (click)="find()">
+                        <mat-icon>search</mat-icon>
+                        Find
+                    </button>
+                </div>
+            </div>
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label class="customMatLabel">Circle</mat-label>
 
-                <mat-select [(ngModel)]="selected_c" formControlName="CircleId" [disabled]="disable_circle">
-                    <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"
-                    >
-                        {{circle?.CircleCode}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label>Choose start date</mat-label>
-                <input matInput [matDatepicker]="picker1" formControlName="StartDate"
-                       (dateChange)="comparisonStartdateValidator()" autocomplete="off">
 
-                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
 
-                <mat-datepicker #picker1></mat-datepicker>
 
-                <mat-error *ngIf="listForm.controls['StartDate'].hasError('invaliddaterange')">
-                    <strong>Start date cannot be greater than end date</strong>
-                </mat-error>
-                <mat-error *ngIf="hasError('StartDate', 'required')">Start Date <strong>required</strong>
-                </mat-error>
 
-            </mat-form-field>
-        </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0"
-        >
-
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label>Choose end date</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="EndDate"
-                       (dateChange)="comparisonEnddateValidator()" autocomplete="off">
-
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-
-                <mat-error *ngIf="listForm.controls['EndDate'].hasError('invaliddaterange')">
-                    <strong>End date cannot be earlier than start date</strong>
-                </mat-error>
-
-                <mat-error *ngIf="hasError('EndDate', 'required')">End Date <strong>required</strong>
-                </mat-error>
-            </mat-form-field>
-        </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-
-            <button mat-raised-button color="accent"
-                    type="button" (click)="find()">
-                <mat-icon>search</mat-icon>
-                Find
-            </button>
-        </div>
 
     </div>
-    <div class="flex flex-auto" style="flex-direction: column;">
+    <div class="flex flex-auto overflow-x-scroll " style="flex-direction: column;">
         <div class="example-table-container">
 
             <table mat-table
