--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -1,5 +1,5 @@
 <div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent" [formGroup]="customerForm">
-    <div class="text-3xl font-extrabold tracking-tight mt-6 pb-2 border-b mb-2 border-green-500">Loan Utilization</div>
+    <div class="text-3xl font-extrabold tracking-tight mt-6 pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Loan Utilization</div>
     <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between
      py-2" style="flex-wrap: wrap" >
      
@@ -79,7 +79,7 @@
     <div class="flex flex-auto px-0 overflow-x-hidden" style="flex-direction: column; overflow-y: scroll">
         <div class="col-lg-12 tab-box">
 
-            <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500">Loan Application</div>
+            <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Loan Application</div>
             <mat-tab-group mat-align-tabs="start">
 
                 <!-- Applicants -->
@@ -148,7 +148,7 @@
         <div *ngIf="DisbursementsRecoveries">
             <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
                 <div class="kt-portlet__head-label">
-                    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500">Disbursements/Recoveries</div>
+                    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Disbursements/Recoveries</div>
                 </div>
             </div>
             <div class="col-lg-12">
@@ -186,7 +186,7 @@
         <!-- images -->
         <div class="kt-portlet__head kt-portlet__head__custom" id="list-header" style="width: 100%">
             <div class="kt-portlet__head-label">
-                <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500">Attach Images</div>
+                <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Attach Images</div>
                 <mat-error *ngIf="hasError('file', 'required')">Must Contain a Image<strong>required</strong>
                 </mat-error>
             </div>
@@ -205,9 +205,9 @@
                     <div class="row">
                         <div class="col-lg-12 sticky-top text-right relative">
                             <div class="bg-white float-right">
-                                <button mat-icon-button *ngIf="!viewonly" (click)="removeImage(url,i)" class="close-button float-right absolute right-4 top-2 bg-white" style="border: green solid 2px;" [mat-dialog-close]="true">
+                                <button mat-icon-button *ngIf="!viewonly" (click)="removeImage(url,i)" class="close-button float-right absolute right-4 top-2 bg-red-500"  [mat-dialog-close]="true">
                                     <!-- X -->
-                                    <mat-icon class="close-icon w-12 h-12 text-red-500" color="warn">close</mat-icon>
+                                    <mat-icon class="close-icon w-12 h-12 text-white">close</mat-icon>
                                 </button>
                             </div>
                         </div>
@@ -222,7 +222,7 @@
         <!--        Video-->
             <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
                 <div class="kt-portlet__head-label">
-                    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500">Attach Videos</div>
+                    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Attach Videos</div>
                     <mat-error *ngIf="hasError('fileV', 'required')">Must Contain a Video<strong>required</strong>
                     </mat-error>
                 </div>
@@ -243,9 +243,9 @@
                         <div class="row">
                             <div class="col-lg-12 sticky-top text-right relative">
                                 <div class="bg-white float-right">
-                                    <button mat-icon-button *ngIf="!viewonly" (click)="removeVideo(url,i)" class="close-button float-right absolute right-4 top-2 bg-red" style="border: green solid 2px;" [mat-dialog-close]="true">
+                                    <button mat-icon-button *ngIf="!viewonly" (click)="removeVideo(url,i)" class="close-button float-right absolute right-4 top-2 bg-red-500"  [mat-dialog-close]="true">
                                         <!-- X -->
-                                        <mat-icon class="close-icon text-white w-12 h-12 text-red-500" color="warn">close</mat-icon>
+                                        <mat-icon class="close-icon text-white w-12 h-12 text-white">close</mat-icon>
                                     </button>
                                 </div>
                             </div>
@@ -268,8 +268,8 @@
 <!--&lt;!&ndash;                <mat-error *ngIf="hasError('remarks', 'required')">Date of Death <strong>required</strong></mat-error>&ndash;&gt;-->
 <!--            </mat-form-field>-->
 
-            <div class="col-md-3 col-sm-12">
-            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+            <div class="col-md-12 col-sm-12">
+            <mat-form-field class="mat-form-field-fluid w-full h-24" appearance="outline">
                 <mat-label class="customMatLabel">Remarks<strong class="matMandatory">*</strong></mat-label>
                 <input matInput placeholder="Enter Remarks" formControlName="Remarks" maxlength="20" autocomplete="off"
                        [readonly]='remarksFeild'/>
