--- a/src/app/shared/crud/alert-dialog-capture/alert-dialog-capture.component.html
+++ b/src/app/shared/crud/alert-dialog-capture/alert-dialog-capture.component.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
-      <div class="kt-form__actions kt-form__actions--sm">
+      <div class="kt-form__actions kt-form__actions--sm mt-4">
         <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
         <button mat-button  class="btn btn-success btn-block" color="primary" cdkFocusInitial>OK</button>
       </div>
