--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -4,16 +4,6 @@
     <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
         [formGroup]="loanutilizationSearch">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <div class="col-md-2 kt-margin-bottom-10-mobile mr-4" *ngIf="!isUserAdmin">
-                <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                    <mat-label>Zone</mat-label>
-                    <input matInput formControlName="Zone" readonly="readonly" maxlength="30" autocomplete="off">
-                    <!--  <mat-error *ngIf="hasError('loanutilizationName', 'required')">loanutilizationName <strong>required</strong></mat-error>-->
-                </mat-form-field>
-            </div>
-<!--            <div class="col-md-2 kt-margin-bottom-10-mobile mr-4">-->
-<!--&lt;!&ndash;             zone&ndash;&gt;-->
-<!--            </div>-->
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
                 <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
@@ -38,8 +28,6 @@
 
             </div>
 
-            </div>
-
             <div class="col-md-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -47,8 +35,7 @@
                         <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
                                     (selectionChange)="changeBranch($event)"
                                     *ngIf="!single_branch">
-                            <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
-                            >
+                            <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode">
                                 {{branch?.Name}}
                             </mat-option>
                         </mat-select>
