--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -79,9 +79,9 @@
 
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
-            <button mat-raised-button color="accent"
+            <button mat-raised-button class="mat-primary"
                     type="button" (click)="search()"><span><i
-                class="fa fa-search"> &nbsp;</i> Find</span></button>
+                class="fa fa-search mat-primary"> &nbsp;</i> Find</span></button>
         </div>
 
     </div>
