--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -6,15 +6,15 @@
 
         <div class="row mt-4">
             <div class="col-md-3 col-sm-12">
-                <div class="col-md-2" *ngIf="!isUserAdmin">
-                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <div class="col-md-12" *ngIf="!isUserAdmin">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Zone</mat-label>
                         <input matInput formControlName="Zone" readonly="readonly" maxlength="30" autocomplete="off">
                         <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
                     </mat-form-field>
                 </div>
-                <div class="col-md-2 " *ngIf="isUserAdmin">
-                    <mat-form-field class="mat-form-field-fluid map-fields" appearance="outline" *ngIf="!BMUser">
+                <div class="col-md-12 " *ngIf="isUserAdmin">
+                    <mat-form-field class="mat-form-field-fluid w-full map-fields" appearance="outline" *ngIf="!BMUser">
                         <mat-label>Zone</mat-label>
                         <mat-select (selectionChange)="GetBranches($event)" formControlName="Zone">
                             <mat-option>
@@ -32,8 +32,8 @@
                         </mat-select>
                     </mat-form-field>
                 </div>
-                <div class="col-md-2 " *ngIf="!isUserAdmin && !isZoneUser">
-                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <div class="col-md-12 " *ngIf="!isUserAdmin && !isZoneUser">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Branch</mat-label>
                         <input matInput formControlName="Branch" readonly="readonly" maxlength="30" autocomplete="off">
                         <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
@@ -42,8 +42,8 @@
             </div>
 
             <div class="col-md-3 col-sm-12">
-                <div class="col-md-2 kt-margin-bottom-10-mobile" *ngIf="isUserAdmin || isZoneUser">
-                    <mat-form-field class="mat-form-field-fluid map-fields" appearance="outline" *ngIf="!BMUser">
+                <div class="col-md-12 kt-margin-bottom-10-mobile" *ngIf="isUserAdmin || isZoneUser">
+                    <mat-form-field class="mat-form-field-fluid w-full map-fields" appearance="outline" *ngIf="!BMUser">
                         <mat-label>Branch</mat-label>
                         <mat-select (selectionChange)="SetBranches($event)" formControlName="Branch">
                             <mat-option>
@@ -65,8 +65,8 @@
             </div>
             <div class="col-md-3 col-sm-12">
 
-                <div class="col-md-2 kt-margin-bottom-10-mobile">
-                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <div class="col-md-12 kt-margin-bottom-10-mobile">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Customer Name</mat-label>
                         <input matInput formControlName="CustomerName" placeholder="Enter Customer Name" maxlength="100"
                                autocomplete="off" appAlphabetOnly>
@@ -76,8 +76,8 @@
 
             </div>
             <div class="col-md-3 col-sm-12">
-                <div class="col-md-2 kt-margin-bottom-10-mobile">
-                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <div class="col-md-12 kt-margin-bottom-10-mobile">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Customer Name</mat-label>
                         <input matInput formControlName="CustomerName" placeholder="Enter Customer Name" maxlength="100"
                                autocomplete="off" appAlphabetOnly>
@@ -95,8 +95,8 @@
         <div class="row">
             
             <div class="col-md-3 col-sm-12">
-                <div class="col-md-2 kt-margin-bottom-10-mobile">
-                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <div class="col-md-12 kt-margin-bottom-10-mobile">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Cnic</mat-label>
                         <input matInput formControlName="Cnic" placeholder="Enter Cnic" maxlength="100" autocomplete="off"
                                [mask]="maskEnums.cnic">
@@ -106,8 +106,8 @@
                 </div>
             </div>
             <div class="col-md-3 col-sm-12">
-                <div class="col-md-2 kt-margin-bottom-10-mobile">
-                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <div class="col-md-12 kt-margin-bottom-10-mobile">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Father Name</mat-label>
                         <input matInput formControlName="FatherName" placeholder="Enter Father Name" maxlength="100"
                                autocomplete="off"
@@ -120,7 +120,7 @@
 
                 <div *ngIf="CustomerStatusLov" class="col-md-12 kt-margin-bottom-10-mobile flex">
 
-                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label>Select Customer Status</mat-label>
                         <mat-select formControlName="CustomerStatus">
                             <mat-option value="">
